# workshop-bot

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Config.example.toml  Dockerfile  LICENSE-MIT  README.md  Secrets.example.toml  build.rs
.changes/: TRNKA.md  add-etc-wkroshop-bot-config.md  add-more-commands.md  config.json  embedfix.md  feat-add-cat-command.md  feat-add-chad-command.md  feat-add-reaction-roles.md  feat-make-workshop-response-ephemeral.md  feat-move-guild-config-into-its-section.md  fix-ci.md  fix-read-env-at-macro-runtime.md  fix-remove-privileged-intents.md  fix-windont-img.md  fix.md  fr-command.md  initial-release.md  kitty_review_command.md  skull-command.md  trnka-gif-fix.md  windont.md  windownt
.github/: renovate.json
.github/workflows/: covector-version-or-publish.yml  docker.yaml  rust.yaml
crates/i18n/: CHANGELOG.md  Cargo.toml  build.rs
crates/i18n/locale/: cs.json  en.json
crates/i18n/src/: lib.rs
locale/: cs.json  en.json
src/: lib.rs
src/commands/: GIF_COMMAND_TEMPLATE.md  GIF_COMMAND_TUTORIAL.md  amimir.rs  cat.rs  chad.rs  command.rs  fr.rs  kitty-review.rs  kitty_review.rs  mod.rs  otakugif.rs  reaction_role.rs  skull.rs  windont.rs  windownt.rs  workshop.rs
src/modules/: automove.rs  invite.rs  log.rs  mod.rs  msgdellog.rs  msgeditlog.rs  status.rs
src/state/: config.rs  mod.rs
