[package]
name = "workshop-bot"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = ["crates/*"]

[lib]

[dependencies]
i18n = { path = "./crates/i18n" }

anyhow = "1.0.68"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }

tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

serde = { version = "1.0.152", features = ["derive"] }
toml = { version = "0.7.1" }
serde_json = "1.0.91"
