lib = { }

[package]
name = "workshop-bot"
version = "0.4.0"
edition = "2021"
publish = false

[workspace]
members = [ "crates/*" ]

[dependencies]
i18n = { path = "./crates/i18n" }
anyhow = "1.0.68"
serenity = { version = "0.11.5", default-features = false, features = [ "client", "gateway", "rustls_backend", "model" ] }
reqwest = { version = "0.11.14", default-features = false, features = [ "json", "multipart", "stream", "rustls-tls" ] }
tokio = { version = "1.25.0", features = [ "macros", "rt-multi-thread" ] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
serde = { version = "1.0.152", features = [ "derive" ] }
basic-toml = { version = "0.1.1" }
serde_json = "1.0.91"
rand = "0.8.5"
